[package]
name = "cert_wipe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1.0"
base64 = "0.21"
# use rand 0.7 to avoid rand_core version mismatch
rand = "0.7"
sha2 = "0.10"
indicatif = "0.17"
dialoguer = "0.10"
# replaced qrcode crate usage with qrcodegen for stable, manual rasterization
qrcodegen = "1.6"
# align image version to simple stable API
image = "0.23"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
html-escape = "0.2"
# enable images feature in genpdf to get elements::Image
genpdf = { version = "0.2", features = ["images"] }